work on timer box and timer function

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <ul>
             <li>
                 <p class="timer" id="timer">
-                    timer here
+                    time per question
+                </br>8 Seconds
                 </p>
             </li>
             <li>
