--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
         <h2 id="question">Current Question</h2>
         <ul>
             <li>
-                <input type="checkbox" name="answer" id="a" class="answer">
+                <input type="radio" name="answer" id="a" class="answer">
                 <label for="a" id="a_text">Answer</label>
             </li>
 
             <li>
-                <input type="checkbox" name="answer" id="b" class="answer">
+                <input type="radio" name="answer" id="b" class="answer">
                 <label for="b" id="b_text">Answer</label>
             </li>
 
             <li>
-                <input type="checkbox" name="answer" id="c" class="answer">
+                <input type="radio" name="answer" id="c" class="answer">
                 <label for="c" id="c_text">Answer</label>
             </li>
             
             <li>
-                <input type="checkbox" name="answer" id="d" class="answer">
+                <input type="radio" name="answer" id="d" class="answer">
                 <label for="d" id="d_text">Answer</label>
             </li>
             
             <li>
-                <input type="checkbox" name="answer" id="e" class="answer">
+                <input type="radio" name="answer" id="e" class="answer">
                 <label for="e" id="e_text">Answer</label>
             </li>
         </ul>
