updated timer software: stuck on checking answer and moving to next question

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="quizmetricStyle.css">
 </head>
 <body>
-   <div class="quizBox" id="quiz">
+    <div class="quizBox" id="quiz">
     <div class="quiz-header">
         <h2 id="question">Current Question</h2>
         <ul>
@@ -43,13 +43,10 @@
     <div class="quiz-scoreBox" id="score">
         <ul>
             <li>
-                <p class="timer" id="timer">
-                    time per question
-                </br>8 Seconds
-                </p>
+                <div class="begin" id="timer"></button>
             </li>
             <li>
-                <p class="score-score" id="score">Your Score</p>
+                <p class="score_score" id="score">Your Score</p>
             </li>
         </ul>
     </div>
