score and timer update but not functional

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="quiz-scoreBox" id="score">
         <ul>
             <li>
-                <div class="begin" id="timer"></button>
+                <div class="begin" id="timer"></div>
             </li>
             <li>
                 <p class="score_score" id="score">Your Score</p>
